--- a/src/styles/bootstrap.scss
+++ b/src/styles/bootstrap.scss
@@ -67,17 +67,44 @@ Boostrap classes override START
 }
 
 .card {
-  color: var(--color-body);
-  background-color: var(--color-body-bg);
+  color: var(--color-body) !important;
+  background-color: var(--color-body-bg) !important;
+  box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%),
+    0px 1px 1px 0px rgb(0 0 0 / 20%), 0px 1px 3px 0px rgb(0 0 0 / 20%);
+
+  @media (prefers-color-scheme: dark) {
+    background: linear-gradient(
+        0deg,
+        rgba(255, 255, 255, 0.16),
+        rgba(255, 255, 255, 0.16)
+      ),
+      var(--color-body-bg);
+    box-shadow: 0px 24px 38px rgba(0, 0, 0, 0.14),
+      0px 9px 46px rgba(0, 0, 0, 0.12), 0px 11px 15px rgba(0, 0, 0, 0.2);
+  }
 }
 
 .navbar {
   background-color: var(--color-primary);
+  @media (prefers-color-scheme: dark) {
+    /* Elevation Overlay / 12dp */
+    background: linear-gradient(
+        0deg,
+        rgba(255, 255, 255, 0.14),
+        rgba(255, 255, 255, 0.14)
+      ),
+      var(--color-body-bg) !important;
+    box-shadow: 0px 12px 17px rgba(0, 0, 0, 0.14),
+      0px 5px 22px rgba(0, 0, 0, 0.12), 0px 7px 8px rgba(0, 0, 0, 0.2) !important;
+  }
 }
 
 .nav-link,
 .navbar-brand {
   color: var(--color-body-bg) !important;
+  @media (prefers-color-scheme: dark) {
+    color: var(--color-body) !important;
+  }
 }
 
 /* 
