--- a/src/index.module.scss
+++ b/src/index.module.scss
@@ -38,12 +38,36 @@ textarea {
   --color-success: #198754;
   --color-info: #adb5bd;
 
+  /* Box shadows and background colors, START */
+  --color-navbar-box-shadow: 0px 12px 17px rgba(0, 0, 0, 0.14),
+    0px 5px 22px rgba(0, 0, 0, 0.12), 0px 7px 8px rgba(0, 0, 0, 0.2);
+
+  --color-card-box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%),
+    0px 1px 1px 0px rgb(0 0 0 / 20%), 0px 1px 3px 0px rgb(0 0 0 / 20%);
+
+  /* Elevation Overlay / 12dp */
+  --color-navbar-bg: linear-gradient(
+      0deg,
+      rgba(255, 255, 255, 0.14),
+      rgba(255, 255, 255, 0.14)
+    ),
+    var(--color-body-bg);
+
+  /* Elevation Overlay / 24dp */
+  --color-card-bg: linear-gradient(
+      0deg,
+      rgba(255, 255, 255, 0.16),
+      rgba(255, 255, 255, 0.16)
+    ),
+    var(--color-body-bg);
+
+  /* Box shadows and background colors, END */
+
   @media (prefers-color-scheme: dark) {
-    // Generate dark palettes for theme colors from color tool
-    // https://material.io/resources/color
-    --color-primary: #557a95;
     --color-body: #fff;
     --color-body-bg: #212529;
+    --color-card-box-shadow: 0px 24px 38px rgba(0, 0, 0, 0.14),
+      0px 9px 46px rgba(0, 0, 0, 0.12), 0px 11px 15px rgba(0, 0, 0, 0.2);
   }
 }
 
