--- a/src/styles/bootstrap.scss
+++ b/src/styles/bootstrap.scss
@@ -145,6 +145,8 @@ body {
 }
 
 .form-select {
+  padding: 0 2.25rem 0 0.75rem !important;
+
   // resetting to UA defaults
   color: fieldtext !important;
   background-color: field !important;
@@ -214,6 +216,24 @@ body {
 .form-check-input:checked {
   background-color: var(--color-primary) !important;
   border-color: var(--color-primary) !important;
+}
+
+.offcanvas {
+  @media (prefers-color-scheme: dark) {
+    background: var(--color-card-bg) !important;
+  }
+}
+
+a {
+  color: var(--color-primary) !important;
+  @media (prefers-color-scheme: dark) {
+    color: var(--color-body) !important;
+  }
+}
+
+a:hover,
+a:active {
+  color: var(--color-secondary) !important;
 }
 
 /* 
