--- a/src/components/Movies/MovieDetails/MovieDetailsInput/movieDetailsInput.module.scss
+++ b/src/components/Movies/MovieDetails/MovieDetailsInput/movieDetailsInput.module.scss
@@ -30,3 +30,7 @@
   justify-content: center;
   place-items: center;
 }
+
+.snackbar-item-root-success {
+  background-color: var(--color-success) !important;
+}
