--- a/src/index.module.scss
+++ b/src/index.module.scss
@@ -56,7 +56,7 @@ a:active {
   --color-success: #198754;
   --color-success-text: #198754;
   --color-info: #cacfd4;
-  --color-error: red;
+  --color-error: #aa2e25;
 
   /* Box shadows and background colors, START */
   --color-card-box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%),
@@ -68,7 +68,7 @@ a:active {
     --color-body-bg: #212529;
     --color-success: #115e3a;
     --color-success-text: #479f76;
-    --color-error: #f6685e;
+    --color-error: #f7867e;
 
     --color-card-box-shadow: 0px 24px 38px rgba(0, 0, 0, 0.14),
       0px 9px 46px rgba(0, 0, 0, 0.12), 0px 11px 15px rgba(0, 0, 0, 0.2);
