--- a/src/components/Checkout/Stripe/stripeCheckoutForm.module.scss
+++ b/src/components/Checkout/Stripe/stripeCheckoutForm.module.scss
@@ -1,4 +1,4 @@
-@import '../../styles/globalTheme.module.scss';
+@import '../../../styles/globalTheme.module.scss';
 
 .payment-form {
   margin: auto;
