feat: paypal integration

--- a/src/components/Checkout/checkout.module.scss
+++ b/src/components/Checkout/checkout.module.scss
@@ -1,4 +1,4 @@
-@import '../../../styles/globalTheme.module.scss';
+@import '../../styles/globalTheme.module.scss';
 
 .container {
   margin: auto;
