--- a/src/containers/ContainerHeader/containerHeader.module.scss
+++ b/src/containers/ContainerHeader/containerHeader.module.scss
@@ -15,6 +15,20 @@
   }
 }
 
+.number-items {
+  height: 18px;
+  width: 18px;
+  background-color: red;
+  color: white;
+  border-radius: 50%;
+  display: inline-block;
+  margin-left: 3px;
+  position: relative;
+  top: -5px;
+  font-size: 12px;
+  text-align: center;
+}
+
 .dropdown {
   button {
     display: flex;
